# swot

./: Cargo.toml  README.md  build.rs
domains/: stoplist.txt
examples/: happy.rs
src/: lib.rs
