[package]
name = "swot"
version = "0.1.0"
edition = "2021"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>"]
description = "Swot is a community-driven or crowdsourced library for verifying that domain names and email addresses are tied to a legitimate university of college"
repository = "https://github.com/orhanbalci/swot.git"
homepage = "https://github.com/orhanbalci"
keywords = ["email","education", "validation"]
license = "MIT"
readme = "README.md"
categories = ["text-processing"]


[dependencies]
rust-embed="6.3"
phf="0.10"
phf_shared="0.10"
validator="0.14"
url="2.2"

[build-dependencies]
phf_codegen = "0.10"